--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+astroid==2.3.3
+bcrypt==3.1.7
+cffi==1.14.0
 Click==7.0
-Flask==1.0.2
-Flask-PyMongo==2.2.0
+dnspython==1.16.0
+Flask==1.1.1
+Flask-PyMongo==2.3.0
+isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-pymongo==3.7.2
-Werkzeug==0.14.1
+Jinja2==2.10.3
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pycparser==2.19
+pylint==2.4.4
+pymongo==3.10.1
+six==1.13.0
+typed-ast==1.4.0
+Werkzeug==0.16.0
+wrapt==1.11.2
