--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,60 @@
+arrow==0.15.5
+astroid==1.6.6
+attrs==19.3.0
+aws-lambda-builders==0.6.0
+aws-sam-cli==0.38.0
+aws-sam-translator==1.19.0
+awscli==1.18.98
+backcall==0.2.0
 bcrypt==3.1.7
+beautifulsoup4==4.9.3
+binaryornot==0.4.4
+blinker==1.4
+boto3==1.12.14
+botocore==1.17.21
+certifi==2019.11.28
+cffi==1.14.1
+chardet==3.0.4
+chevron==0.13.1
 Click==7.0
+colorama==0.4.3
+cookiecutter==1.6.0
+dateparser==0.7.2
+decorator==4.4.2
 Django==2.0.2
 dnspython==2.0.0
+docker==4.2.0
+docutils==0.15.2
 Flask==1.0.4
 Flask-Mail==0.9.1
 Flask-PyMongo==2.3.0
+future==0.18.2
 git-remote-codecommit==1.13
+idna==2.8
+ikp3db==1.4.1
+importlib-metadata==1.7.0
+Inflector==2.0.12
 ipython==7.16.1
 ipython-genutils==0.2.0
+isort==5.1.1
+itsdangerous==1.1.0
+jedi==0.11.1
 Jinja2==2.11.1
 jinja2-time==0.2.0
+jmespath==0.10.0
 jsonschema==3.2.0
 lazy-object-proxy==1.5.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mongo==0.2.0
+parso==0.1.1
 pbr==5.4.5
 pexpect==4.8.0
 pickleshare==0.7.5
 poyo==0.5.0
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+py-edamam==0.2
 pyasn1==0.4.8
 pycparser==2.20
 Pygments==2.6.1
@@ -29,6 +63,7 @@ pylint-django==0.8.0
 pylint-flask==0.5
 pylint-plugin-utils==0.6
 pymongo==3.11.0
+pymongo-auth-aws==1.0.2
 pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2020.1
@@ -39,6 +74,7 @@ rsa==4.5
 s3transfer==0.3.3
 serverlessrepo==0.1.9
 six==1.15.0
+soupsieve==2.0.1
 stevedore==3.1.0
 tomlkit==0.5.8
 traitlets==4.3.3
@@ -53,4 +89,3 @@ Werkzeug==1.0.0
 whichcraft==0.6.1
 wrapt==1.12.1
 zipp==3.1.0
-py-edamam==0.2
